--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="post">
   <header class="post-header">
-    <h1 class="post-title" dir={{site.data[site.active_lang].strings.dir}} align={{site.data[site.active_lang].strings.align}}>
+    <h1 class="post-title" dir="{{site.data[site.active_lang].strings.dir}}" align="{{site.data[site.active_lang].strings.align}}">
       {% if site.title == 'blank' %}
         <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
         {{ site.last_name }}
@@ -35,7 +35,7 @@ layout: default
         {% if page.social %}
           <div class="social">
             <div class="contact-note">{{ site.data[site.active_lang].strings.contact_note }}</div>
-            
+
             <div class="contact-icons">{% include social.liquid %}</div>
           </div>
         {% endif %}
@@ -45,41 +45,41 @@ layout: default
       </div>
     {% endif %}
 
-    
-    <div class="clearfix" dir={{site.data[site.active_lang].strings.dir}} align={{site.data[site.active_lang].strings.align}}>{{ content }}</div>
+    <div class="clearfix" dir="{{site.data[site.active_lang].strings.dir}}" align="{{site.data[site.active_lang].strings.align}}">{{ content }}</div>
     <!-- News -->
-    <div  dir={{site.data[site.active_lang].strings.dir}} align={{site.data[site.active_lang].strings.align}}>
-    {% if page.news and site.announcements.enabled %}
-      <h2  dir={{site.data[site.active_lang].strings.dir}} align={{site.data[site.active_lang].strings.align}}>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">{{ site.data[site.active_lang].strings.news }}</a>
-      </h2>
-      {% include news.liquid limit=true %}
-    {% endif %}
+    <div dir="{{site.data[site.active_lang].strings.dir}}" align="{{site.data[site.active_lang].strings.align}}">
+      {% if page.news and site.announcements.enabled %}
+        <h2 dir="{{site.data[site.active_lang].strings.dir}}" align="{{site.data[site.active_lang].strings.align}}">
+          <a href="{{ '/news/' | relative_url }}" style="color: inherit">{{ site.data[site.active_lang].strings.news }}</a>
+        </h2>
+        {% include news.liquid limit=true %}
+      {% endif %}
 
-    <!-- Latest posts -->
-    {% if site.latest_posts.enabled %}
-      <h2>
-        <a href="{{ '/blog/' | relative_url }}" style="color: inherit">{{ site.data[site.active_lang].strings.latest_posts }}</a>
-      </h2>
-      {% include latest_posts.liquid %}
-    {% endif %}
+      <!-- Latest posts -->
+      {% if site.latest_posts.enabled %}
+        <h2>
+          <a href="{{ '/blog/' | relative_url }}" style="color: inherit">{{ site.data[site.active_lang].strings.latest_posts }}</a>
+        </h2>
+        {% include latest_posts.liquid %}
+      {% endif %}
 
-    <!-- Selected papers -->
-    {% if page.selected_papers %}
-      <h2>
-        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">{{ site.data[site.active_lang].strings.selected_publications }}</a>
-      </h2>
-      {% include selected_papers.liquid %}
-    {% endif %}
+      <!-- Selected papers -->
+      {% if page.selected_papers %}
+        <h2>
+          <a href="{{ '/publications/' | relative_url }}" style="color: inherit">{{ site.data[site.active_lang].strings.selected_publications }}</a>
+        </h2>
+        {% include selected_papers.liquid %}
+      {% endif %}
     </div>
-    <!-- Social
-    {% if page.social %}
-      <div class="social">
-        <div class="contact-icons">{% include social.liquid %}</div>
+    <!--
+      Social
+      {% if page.social %}
+        <div class="social">
+          <div class="contact-icons">{% include social.liquid %}</div>
 
-        <div class="contact-note">{{ site.data[site.active_lang].strings.contact_note }}</div>
-      </div>
-    {% endif %}
+          <div class="contact-note">{{ site.data[site.active_lang].strings.contact_note }}</div>
+        </div>
+      {% endif %}
     -->
   </article>
 </div>
