--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="post"  dir={{site.data[site.active_lang].strings.dir}} align={{site.data[site.active_lang].strings.align}}>
+<div class="post" dir="{{site.data[site.active_lang].strings.dir}}" align="{{site.data[site.active_lang].strings.align}}">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-description">{{ page.description }}</p>
