--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -14,7 +14,7 @@ layout: default
 
 {% assign url_beginning = page.url | slice: 0, 6 %}
 
-<div class="post"  dir={{site.data[site.active_lang].strings.dir}} align={{site.data[site.active_lang].strings.align}}>
+<div class="post" dir="{{site.data[site.active_lang].strings.dir}}" align="{{site.data[site.active_lang].strings.align}}">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">
